--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<div class="container-fluid">
+<h2>Name: {{userDetails?.name}}</h2>
+<h2>Email: {{userDetails?.email}}</h2>
+<button class="btn btn-block" (click)="signOut()">Sign Out</button>
+
+</div>
