--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import (reference) "./assets/colors.less";
+
+.main-btn {
+	width: 100%;
+	height: 42px;
+	background-color: @primary-green;
+	border: none;
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 17px;
+	margin: 4px 2px;
+	font-weight: 600;
+	border-radius: 12px;
+}
