--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <h1>Bonobo</h1>
+</div>
+
 
 <span class="font-weight-bold">Name: </span>{{userDetails?.name}}
 <span class="font-weight-bold">Name: </span>{{userDetails?.email}}
