--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,12 @@
 @import (reference) "./assets/colors.less";
 
+body {
+	background-color: @bon-cream;
+}
+.container {
+	padding-top: 12px;
+	padding-bottom: 12px;
+}
 .main-btn {
 	width: 100%;
 	height: 42px;
