--- a/src/styles.less
+++ b/src/styles.less
@@ -6,6 +6,8 @@ body {
 .container {
 	padding-top: 12px;
 	padding-bottom: 12px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 .main-btn {
 	width: 100%;
@@ -46,4 +48,12 @@ button.btn.btn-group-select:hover {
 
 .no-padding {
 	padding: 0;
+}
+
+.card-padding {
+	padding: 5px;
+}
+
+nav a.active {
+	color: @bon-dark;
 }
